fixed alignments

--- a/css/styles.css
+++ b/css/styles.css
@@ -279,8 +279,7 @@ body
 }
 .footer p
 {
-    padding-top: 4px;
-    margin-top:6px;
+    padding-top: 5px;
     color:rgb(199, 250, 250,0.9);
 }
 .footer
@@ -289,6 +288,10 @@ body
     text-align:center;
     font-size:12px;
     height:25px;
-    width:1030px;
     margin-top:15px;
+    width:inherit;
+}
+.services-footer
+{
+    margin-left:3px;
 }
